[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pathfind"
version = "1.0.0"
description = "Compare pathfinding approaches"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Vincent Martineau", email = "vincent.martineau.1@ulaval.ca" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

